--- a/nov30/Nov-30Class.tex
+++ b/nov30/Nov-30Class.tex
@@ -76,6 +76,9 @@ Other choices are shifted inverse iteration (Weilandt's method and Rayleigh Quot
 At each step each solver has pros and cons. We think about things like convergence rate, ability to parallelize, and ability to precondition/accelerate.\\
 Each iteration level often comes with its own set of preconditioners and/or acceleration strategies.
 
+
+%-------------------------------------------------------------------
+%-------------------------------------------------------------------
 \textit{Inner Iterations:}\\
 Inner iteration index is $p$, we've suppressed the energy index for now.\\
 We need to know $\phi_{l,i}^{(p-1)}$, so for $p=1$ we have an initial guess for $\phi_{l,i}^{(0)}$. \\
@@ -91,13 +94,13 @@ For each energy group, this is basically the source iteration method, but can be
     minimum height=2em]
 %
 \begin{center}
-\begin{tikzpicture}[node distance = 2cm, auto]
+\begin{tikzpicture}[node distance = 2.5cm, auto]
     % Place nodes
     \node [block] (init) {Angular\\moments, $\phi_{l,i}^{(p-1)}$};   
     \node [cloud, right of=init, node distance=5cm] (input) {$\phi_{l,i}^{(0)}$};
-    \node [block, below of=init, node distance=2.5cm] (source) {scattering formula + external source: $q_{n,1}^{(p-1)}$};
+    \node [block, below of=init] (source) {scattering formula + external source: $q_{n,1}^{(p-1)}$};
     \node [block, below of=source, node distance=3cm] (sweep) {angular flux: $\psi_{n,i}^{(p)}$};
-        \node [block, below of=sweep, node distance=2.5cm] (moments) {update angular flux moments: $\phi_{l,i}^{(p)}$};
+        \node [block, below of=sweep] (moments) {update angular flux moments: $\phi_{l,i}^{(p)}$};
     \node [decision, below of=moments, node distance=3cm] (converged) {$\phi_{0,i}$ converged?};
     \node [block, right of=converged, node distance=5cm] (stop) {terminate successfully:\\ solution is $\phi_{l,i}^{(p)}$};
     \node [decision, left of=converged, node distance=5cm] (max) {$p \geq p_{\max}$?};
@@ -154,7 +157,12 @@ If we have only downscattering, $\Sigma_{s,l,gg'}=0$ when $g' > g$, we only need
 \item And so on through $g=G$, then we are completely solved for all groups.
 \end{itemize}
 %
-However, we often have upscattering, where lower groups contribute back to higher groups, as well as neutrons coming from fission. One set of inner iterations won't do that for us, so we need outer iterations. \\
+However, we often have upscattering, where lower groups contribute back to higher groups, as well as neutrons coming from fission. One set of inner iterations won't do that for us, so we need 
+
+
+%-------------------------------------------------------------------
+%-------------------------------------------------------------------
+\textit{Outer Iterations:} \\
 We will write this in words for Gauss Seidel for outer iteration index $J$:
 %
 \begin{itemize}
@@ -178,7 +186,7 @@ I had mentioned outer iteration solution options. to consider these, we will thi
 %Now, $\ve{P}_J = \ve{I} -  \ve{D}^{-1}\ve{A}$ and $\tilde{\vec{b}} =\ve{D}^{-1}\vec{b}$.
 %
 has the algorithm, for $g = 1, \dots, G$:
-\[\phi^{(J)}_g = \frac{1}{a_{gg}}(b_g - \sum_{t=1}^{g-1} a_{gg'} \phi_t^{(J-1)} - \sum_{j=g+1}^{n} a_{gg'} \phi_t^{(J-1)})\:.\]
+\[\phi^{(J)}_g = \frac{1}{a_{gg}}(b_g - \sum_{g'=1}^{g-1} a_{gg'} \phi_{g'}^{(J-1)} - \sum_{g'=g+1}^{n} a_{gg'} \phi_{g'}^{(J-1)})\:.\]
 
 Jacobi is unconditionally stable and linearly convergent, but may converge very slowly in some situations. (we will leave detailed analysis of this to another class). \\
 %Jacobi will converge (perhaps quite slowly) if $\ve{P}_J$'s spectral radius is $<$ 1, but that's often difficult to estimate \cite{LeVeque2007}. 
@@ -191,7 +199,7 @@ Jacobi isn't a very sophisticated method, but it's easy to parallelize. Why migh
 
 \textbf{Gauss Seidel Iteration} is a simple modification of Jacobi, but becomes a bit more complicated. (How can you think of changing Jacobi than might incorporate more information that we already have?)\\
 The algorithm for this method is, for $i = 1, \dots, n$:
-\[ \phi^{(J)}_g = \frac{1}{a_{gg}}(b_g - \sum_{t=1}^{g-1} a_{gg'} \phi_t^{(J)} - \sum_{j=g+1}^{n} a_{gg'} \phi_t^{(J-1)}) \:.\]
+\[ \phi^{(J)}_g = \frac{1}{a_{gg}}(b_g - \sum_{g'=1}^{g-1} a_{gg'} \phi_{g'}^{(J)} - \sum_{g'=g+1}^{n} a_{gg'} \phi_{g'}^{(J-1)}) \:.\]
 %
 %In matrix notation, this looks like:
 %\[(\ve{D} + \ve{L})\vec{x}^{k+1} = -\ve{U} \vec{x}^{(k)} + \vec{b}\:, \]
@@ -220,9 +228,102 @@ If $\omega = 1$ this is source iteration.\\
 %If $\omega^{(p-1)}$ is constant, then this is the \textit{stationary} Richardson method. 
 %
 The algorithm for this method, which is within each group, is:
-\[\phi_{0,i}^{(p)} =  \phi^{(p-1)}_{0,i} - \omega^{(p-1)} \sum_{j=1}^{n} a_{ij}x_j^{(p-1)} + \omega^{(p-1)} b_i \:.\]
+\[\phi_{0,i}^{(p)} =  \phi^{(p-1)}_{0,i} - \omega^{(p-1)} \sum_{i'=1}^{I} a_{ii'}\phi_{0,i'}^{(p-1)} + \omega^{(p-1)} b_i \:.\]
 %
 %People still use these methods. I've written a preconditioner that uses Richardson Iteration. 
 The speed of convergence and is determined by $c = \Sigma_s / \Sigma$. For problems dominated by scattering, this method will converge very slowly. 
+
+
+%-------------------------------------------------------------------
+%-------------------------------------------------------------------
+\textit{Eigenvalue Iterations:}\\
+The generalized eigenvalue problem takes the form $\ve{B}x = \mu \ve{C}x$ and can be transformed into an ordinary eigenvalue problem, $\ve{A}x= \lambda x_i$. Both forms have the same right eigenvectors. If $\ve{C}$ is non-singular, then $\ve{A} = \ve{C}^{-1}\ve{B}$.
+
+Let $\sigma(\ve{A}) \equiv \{\lambda \in \mathbb{C} : rank(\ve{A} - \lambda \ve{I}) \le n\}$ be the spectrum of $\ve{A}$, where the elements in the set are the eigenvalues and $\mathbb{C}$ is the set of complex numbers.\\ %The eigenvalues can be characterized as the $n$ roots of the polynomial $p_{\ve{A}}(\lambda) \equiv det(\lambda \ve{I} - \ve{A})$. 
+Each distinct eigenvalue in $\sigma(\ve{A})$ has a corresponding nonzero vector $x$ such that $\ve{A}x_{i} = \lambda_{i} x_{i}$ for $i = 1,...,n$.\\
+It will be assumed that the eigenvalues are ordered as $|\lambda_{1}| > |\lambda_{2}| \ge \dots \ge |\lambda_{n}| \ge 0$. 
+
+Power iteration (PI) is an old and straightforward algorithm for finding an eigenvalue/vector pair. \\
+The basic idea is that any nonzero vector can be written as a linear combination of the eigenvectors of $\ve{A}$ because the eigenvectors are linearly independent, namely $v_0 = \gamma_1 x_1 + \gamma_2 x_2 + \cdots + \gamma_n x_n$ where $x_{j}$ is the $j$th eigenvector and $\gamma_{j}$ is some constant.% This specific expression assumes a non-defective $\ve{A}$, though this assumption is not necessary for the method to work. 
+
+Another fact that is used to understand power iteration is that $\ve{A}^k x_i = \lambda_i^k x_i$. Thus
+%
+\begin{equation}
+  \ve{A}^k v_{0} = \gamma_1 \lambda_1^k x_1 + \gamma_2 \lambda_2^k x_2 + \cdots + \gamma_n \lambda_n^k x_n \:.
+  \label{eq:Ak}
+\end{equation}
+%
+Since $|\lambda_1| > |\lambda_i|, i \ne 1$, the first term in the expansion will dominate as $k \to \infty$ and $\ve{A}^k v_{0}$ therefore becomes an increasingly accurate approximation to $x_1$.\\ 
+In practice, it is desirable to avoid exponentiating a matrix and it is helpful to normalize $v_0$ in order to avoid possible over or underflow. This leads to this algorithm:\\
+Given $\ve{A}$ and $v_0$, $v = \frac{v_{0}}{||v_{0}||}$, until convergence do:
+\begin{itemize}
+    \item $w = \ve{A}v$
+    \item $v = \frac{w}{||w||}$
+    \item $\lambda = v^{T}\ve{A}v$
+\end{itemize}
+%
+The error is reduced in each iteration (analysis omitted here) by a factor of $|\frac{\lambda_{2}}{\lambda_{1}}|$, which is called the dominance ratio. \\
+If $\lambda_2$ is close to $\lambda_1$, then this ratio will be close to 1 and the method will converge very slowly. \\
+If $\lambda_2$ is far from $\lambda_1$, then convergence will happen much more quickly. \\
+Put simply, PI is better suited for problems where $\ve{A}$ has eigenvalues that are well separated.
+
+Power iteration is very attractive because it only requires matrix-vector products and two vectors of storage space. \\
+Because of its simplicity and low storage cost, PI has been widely used in the transport community for criticality problems for quite some time. \\
+Many current codes use an acceleration method with PI, or have moved away from it altogether because of the slow convergence for many problems of interest. \\
+Nevertheless it is still used in some codes, has historical relevance, and is used in many studies as a base comparison case. 
+
+\vspace*{1 em}
+Relating this more concretely to the transport equation: (let's look at multi-D)
+\\
+The fixed source for group $g$ is
+\[
+q_{n,i,j}^g = \sum_{g'=1; g' \neq g}^G \sum_{l=0}^L \sum_{m=-l}^l (2 - \delta_{m0})Y_{lm}^e(\mu_n, \eta_n) \Sigma_{s,l,i,j}(g' \rightarrow g) \phi_{l,i,j}^{m,g'} + \frac{\chi^g}{k}\bigl(\underbrace{\sum_{g'=1}^G \nu \Sigma_{f,i,j}^{g'} \phi_{0,i,g}^{g'}}_{F_{ij}} \bigr)
+\]
+and
+\[
+\phi_{l,i,j}^{m,g} \equiv \frac{1}{4}\sum_{n=1}^{(N+2)N/2} w_n Y_{lm}^e(\mu_n, \eta_n) \psi_{n,i,j}^g\:.
+\]
+%
+The \textit{Power Iteration} algorithm built into GS:
+\begin{itemize}
+\item start with the previous iterate: $F_{ij}^{(J-1)}$ and $k^{(J-1)}$
+\item compute $q_{F,i,j}^{g,(J-1)} = \chi_g / k^(J-1) * F_{ij}^{(J-1)}$
+\item conduct an outer iteration by doing a full set of inners (fission + upscattering from $(J-1)$ and downscattering from $(J)$). 
+
+\item update the eigenvalue:
+\[
+k^{(j)} = \dfrac{\sum_{i,j} w_{ij} \Delta x_i \Delta y_j F_{ij}^{(J)}}{\frac{1}{k^{(J-1)} }\sum_{i,j} w_{ij} \Delta x_i \Delta y_j F_{ij}^{(J-1)}}
+\]
+where $w_{ij}$ is a weight determined by your method and this is the ``generational" definition of $k_{eff}$.
+
+\item Compare $\phi_{0,i,j}^{(J)}$ to $\phi_{0,i,j}^{(J-1)}$ *and* $k^{(J)}$ to $k^{(J-1)}$
+\end{itemize}
+
+We can now update our picture to include all of this:
+
+\begin{center}
+\begin{tikzpicture}[node distance = 2.5cm, auto]
+    % Place nodes and draw edges
+    \node [block] (sweep) {mesh sweep};    
+    \node [below of=sweep] (hold) {};
+    \node [decision, right of=hold] (gconv) {group fluxes converged?};
+    \node [block, left of=hold, node distance=4cm] (gscattering) {compute group self-scattering};
+    \path [line] (init) -| node{group flux angular moments}(gconv);
+    \path [line] (gconv) -- node {no}(gscattering);
+    \path [line] (gscattering) |- node {1-speed fixed src}(init);
+    \node [decision, below of=gconv, node distance=3.5cm] (lg) {last group?};
+    \path [line] (gconv) -- node{yes}(lg);
+    \node [block, left of=lg, node distance=9.5cm] (next) {Next Group Source\\ 1. downscatter:\\this outer \\ 2. upscatter: prev outer \\ 3. fission density};
+    \path [line] (lg) -- node{no}(next);
+    \path [line] (next) |- (sweep);
+    \node [decision, below of=lg, node distance=3.5cm] (conv) {all groups converged?};
+    \node [block, left of=conv,  node distance=7cm] (fsource) {compute new \\fission source $F_{ij}$};
+    \node [block, below of=conv, node distance=3cm] (term) {terminate successfully};
+    \path [line] (lg) -- node{yes}(conv);
+    \path [line] (conv) -- node{no}(fsource);
+    \path [line] (fsource) -- (next);
+    \path [line] (conv) -- node{yes}(term);
+\end{tikzpicture}
+\end{center}
 
 \end{document}
