--- a/nov30/Nov-30Class.tex
+++ b/nov30/Nov-30Class.tex
@@ -177,14 +177,14 @@ We will write this in words for Gauss Seidel for outer iteration index $J$:
 I had mentioned outer iteration solution options. To consider these, we will think of our problem as looking like $\ve{A} \phi = b$ (which we won't talk about much further today).
 
 \textbf{Jacobi}, probably the simplest method, has the algorithm, for $g = 1, \dots, G$:
-\[\phi^{(J)}_g = \frac{1}{a_{gg}}(b_g - \sum_{g'=1}^{g-1} a_{gg'} \phi_{g'}^{(J-1)} - \sum_{g'=g+1}^{n} a_{gg'} \phi_{g'}^{(J-1)})\:.\]
+\[\phi^{(J)}_g = \frac{1}{a_{gg}}(b_g - \sum_{g'=1}^{g-1} a_{gg'} \phi_{g'}^{(J-1)} - \sum_{g'=g+1}^{G} a_{gg'} \phi_{g'}^{(J-1)})\:.\]
 
 Jacobi is unconditionally stable and linearly convergent, but may converge very slowly in some situations (we leave detailed analysis of this to another class). \\
 Jacobi isn't a very sophisticated method, but it's easy to parallelize. Why might that be? \\The Jacobi method is order independent since all terms on the right are at the old iteration level. 
 
 \textbf{Gauss Seidel Iteration} is a simple modification of Jacobi, but becomes a bit more complicated. (How can you think of changing Jacobi than might incorporate more information that we already have?)\\
-The algorithm for this method is, for $i = 1, \dots, n$:
-\[ \phi^{(J)}_g = \frac{1}{a_{gg}}(b_g - \sum_{g'=1}^{g-1} a_{gg'} \phi_{g'}^{(J)} - \sum_{g'=g+1}^{n} a_{gg'} \phi_{g'}^{(J-1)}) \:.\]
+The algorithm for this method is, for $g = 1, \dots, G$:
+\[ \phi^{(J)}_g = \frac{1}{a_{gg}}(b_g - \sum_{g'=1}^{g-1} a_{gg'} \phi_{g'}^{(J)} - \sum_{g'=g+1}^{G} a_{gg'} \phi_{g'}^{(J-1)}) \:.\]
 %
 Gauss Seidel is also unconditionally stable and linearly convergent, and 
 converges twice as fast as Jacobi (not proven here). \\
@@ -259,7 +259,7 @@ The \textit{Power Iteration} algorithm built into GS is:
 
 \item update the eigenvalue:
 \[
-k^{(j)} = \dfrac{\sum_{i,j} w_{ij} \Delta x_i \Delta y_j F_{ij}^{(J)}}{\frac{1}{k^{(J-1)} }\sum_{i,j} w_{ij} \Delta x_i \Delta y_j F_{ij}^{(J-1)}}
+k^{(J)} = \dfrac{\sum_{i,j} w_{ij} \Delta x_i \Delta y_j F_{ij}^{(J)}}{\frac{1}{k^{(J-1)} }\sum_{i,j} w_{ij} \Delta x_i \Delta y_j F_{ij}^{(J-1)}}
 \]
 where $w_{ij}$ is a weight determined by your method and this is the ``generational" definition of $k_{eff}$.
 
@@ -284,7 +284,7 @@ We can now update our picture to include all of this:
     \path [line] (lg) -- node{no}(next);
     \path [line] (next) |- (sweep);
     \node [decision, below of=lg, node distance=3.5cm] (conv) {$\phi_0^g \forall g$ and $k$ converged?};
-    \node [block, left of=conv,  node distance=7cm] (fsource) {compute new \\fission source $F_{ij}$};
+    \node [block, left of=conv,  node distance=7cm] (fsource) {compute new \\fission source $F_{ij}$ and $k$};
     \node [block, below of=conv, node distance=3cm] (term) {terminate successfully};
     \path [line] (lg) -- node{yes}(conv);
     \path [line] (conv) -- node{no}(fsource);
