beginning to update syllabus for f17; pausing to convert this to gh-pages.:

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -45,11 +45,12 @@
 
 \maketitle
 \begin{center}
-Fall 2015
+Fall 2017
 \par\end{center}
 
 \begin{center}
-M W 10:00 - 12:00 PM
+Th 1:00 -- 3:00 PM\\
+F  3:00 -- 5:00 PM
 \par\end{center}
 
 \begin{center}
@@ -70,14 +71,14 @@ of reactor design and analysis.
 \noindent \href{https://www.nuc.berkeley.edu/people/rachel-slaybaugh}{Rachel Slaybaugh}\\
 \href{slaybaugh@berkeley.edu}{slaybaugh@berkeley.edu}\\
 4173 Etcheverry Hall\\
-Office hours by appointment
+Office hours Fridays, 10:00 -- 11:00  AM or by appointment
 
 \subsection*{\noindent \textsc{\textcolor{blue}{Reader}}}
 
-\noindent Kelly Rowland\\
-\href{krowland@berkeley.edu}{krowland@berkeley.edu}\\
-3115 Etcheverry Hall\\
-Office hours TBD
+%\noindent Kelly Rowland\\
+%\href{krowland@berkeley.edu}{krowland@berkeley.edu}\\
+%3115 Etcheverry Hall\\
+%Office hours TBD
 
 
 \subsection*{\noindent \textsc{\textcolor{blue}{Textbook}}}
