part way through syllabus update.

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -23,7 +23,7 @@
 \date{\vspace{-10ex}}
 \fancyhead{}
 \fancyfoot{}
-\fancyhead[LO,LE]{\footnotesize{NE 250 - Fall `15}}
+\fancyhead[LO,LE]{\footnotesize{NE 250 - Fall `17}}
 \fancyhead[RO,RE]{\footnotesize{Syllabus}}
 \fancyfoot[CO,CE]{\thepage}
 \renewcommand{\headrulewidth}{0.4pt}
@@ -54,7 +54,7 @@ F  3:00 -- 5:00 PM
 \par\end{center}
 
 \begin{center}
-205 Wheeler\bigskip{}
+Location TBD\bigskip{}
 \thispagestyle{empty}
 \par\end{center}
 
@@ -71,9 +71,9 @@ of reactor design and analysis.
 \noindent \href{https://www.nuc.berkeley.edu/people/rachel-slaybaugh}{Rachel Slaybaugh}\\
 \href{slaybaugh@berkeley.edu}{slaybaugh@berkeley.edu}\\
 4173 Etcheverry Hall\\
-Office hours Fridays, 10:00 -- 11:00  AM or by appointment
+Office hours Fridays, 1:00 -- 2:00  PM or by appointment
 
-\subsection*{\noindent \textsc{\textcolor{blue}{Reader}}}
+%\subsection*{\noindent \textsc{\textcolor{blue}{Reader}}}
 
 %\noindent Kelly Rowland\\
 %\href{krowland@berkeley.edu}{krowland@berkeley.edu}\\
@@ -93,25 +93,26 @@ Analysis.} John Wiley \& Sons (1976), ISBN 0-471-22363-8
 \subsection*{\noindent \textsc{\textcolor{blue}{Additional Resources}}}
 
 \begin{itemize}
-\item Class GitHub: \href{https://github.com/rachelslaybaugh/NE250}{https://github.com/rachelslaybaugh/NE250}
+\item Class GitHub: \url{https://github.com/rachelslaybaugh/NE250}
 
-\item Bcourses: \href{https://bcourses.berkeley.edu}{https://bcourses.berkeley.edu}
+\item Bcourses Site: \url{https://bcourses.berkeley.edu/courses/1463043}
 
-\item Library: \href{http://www.lib.berkeley.edu/node}{http://www.lib.berkeley.edu/node}
+\item Library: \url{http://www.lib.berkeley.edu/node}
 
-\item KAERI: \href{http://atom.kaeri.re.kr/}{http://atom.kaeri.re.kr/}
-\item U.S.\ Nuclear Data\href{http://www.nndc.bnl.gov/}{http://www.nndc.bnl.gov/}
+\item KAERI: \url{http://atom.kaeri.re.kr/}
 
-\item Serpent official website: \href{http://montecarlo.vtt.fi/}{http://montecarlo.vtt.fi/} 
+\item U.S.\ Nuclear Data\url{http://www.nndc.bnl.gov/}
 
-\item DECF (1171 and 1111 Etcheverry): \href{http://www.decf.berkeley.edu/}{http://www.decf.berkeley.edu/}
+\item Serpent official website: \url{http://montecarlo.vtt.fi/} 
 
-\item Free Python ebooks:
-\href{http://www.leettips.org/2013/02/top-10-free-python-pdf-ebooks-download.html}{http://www.leettips.org/2013/02/top-10-free-python-pdf-ebooks-download.html}
+\item DECF (1171 and 1111 Etcheverry): \url{http://www.decf.berkeley.edu/}
 
-\item The Hacker Within: \href{http://thehackerwithin.github.io/berkeley/}{http://thehackerwithin.github.io/berkeley/}
+\item Free Python ebooks:\\
+\url{http://www.leettips.org/2013/02/top-10-free-python-pdf-ebooks-download.html}
 
-\item Software Carpentry: \href{http://software-carpentry.org/lessons.html}{http://software-carpentry.org/lessons.html}
+\item The Hacker Within: \url{http://thehackerwithin.github.io/berkeley/}
+
+\item Software Carpentry: \url{http://software-carpentry.org/lessons.html}
 \end{itemize}
 
 
