updated syllabus and survey.

--- a/survey.tex
+++ b/survey.tex
@@ -40,8 +40,8 @@
 %---------------------------------------------------------------------------
 \begin{document}
 \begin{center}
-{\bf NE 250, F15 \\
-Introductory Course Survey \\ August 26, 2015}
+{\bf NE 250, F17 \\
+Introductory Course Survey \\ August 24, 2017}
 \end{center}
 
 \setlength{\unitlength}{1in}
@@ -61,7 +61,7 @@ Are there any special accommodations you need for this course?
 What did you study as an undergraduate?
 \vspace*{3 em}
 
-Have you ever used Serpent or MCNP?
+Have you ever used any transport software? If so, what?
 \vspace*{3 em}
 
 
