--- a/syllabus.tex
+++ b/syllabus.tex
@@ -54,7 +54,7 @@ F  3:00 -- 5:00 PM
 \par\end{center}
 
 \begin{center}
-Location TBD\bigskip{}
+203 McLaughlin Hall\bigskip{}
 \thispagestyle{empty}
 \par\end{center}
 
@@ -152,11 +152,18 @@ discussion will follow. More details to be provided.
 \item \noindent Paper critique: 30\%
 \item \noindent In class participation: 10\%
 \end{itemize}
-\begin{singlespace}
-\noindent Grading scale (tentative): A+ > 95\%, A > 91\%, A- > 87\%,
-B+ > 83\%, B > 79\%, B- > 75\%, C+ > 71\%, C > 67\%, C- > 63\%, D+
-> 59\%, D > 55\%, D- > 50\%, F $\leq$ 50\%.
-\end{singlespace}
+%\begin{singlespace}
+%\noindent Grading scale (tentative): A+ > 95\%, A > 91\%, A- > 87\%,
+%B+ > 83\%, B > 79\%, B- > 75\%, C+ > 71\%, C > 67\%, C- > 63\%, D+
+%> 59\%, D > 55\%, D- > 50\%, F $\leq$ 50\%.
+%\end{singlespace}
+
+\vspace*{.15in}
+\subsection*{\textsc{\textcolor{blue}{Useful Campus Information}}}
+\begin{itemize}
+  \item Mental health resources: \href{http://www.uhs.berkeley.edu/students/counseling/cps.shtml}{http://www.uhs.berkeley.edu/students/counseling/cps.shtml}
+  \item Sexual assault support on campus: \href{http://survivorsupport.berkeley.edu/}{http://survivorsupport.berkeley.edu/}
+\end{itemize}
 
 
 \subsection*{\textsc{\textcolor{blue}{Classroom Decorum}}}
@@ -269,7 +276,6 @@ We will cover these topics (subject to change):
 \end{itemize}
 \item Perturbation theory and sensitivity analysis
 \item The adjoint transport equation
-\item Neutronics modeling tools: Serpent
 \end{itemize}
 
 \subsection*{}
