updated paper critique directions.

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -140,11 +140,11 @@ Assignments will require a considerable amount of time (don't start
 working on it the night before!) and no extension will be granted.
 The lowest grade will be dropped (play it well!).\\
 
-\noindent On an irregular schedule, but with a two weeks notice, a
-research paper will be assigned for reading. A student will be selected
-every week to prepare a critique of the paper based on an extensive
-literature review. The student will present their critique and a class
-discussion will follow. More details to be provided.
+\noindent Each week a
+research paper will be assigned for reading. A small group of students will be selected
+to prepare a critique of the paper based on an extensive
+literature review. The students will present their critique and a class
+discussion will follow. Each student will prepare a one or two paragraph response for each paper. See bCourses for assignment details.\\
 
 \noindent Grade proportion:
 \begin{itemize}
