moving names of things for clarity.

--- a/02-fission-te/fission-te.tex
+++ b/02-fission-te/fission-te.tex
@@ -1,6 +1,9 @@
 \documentclass[12pt]{article}
 \usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
 
+\newif\ifeqns
+\eqnstrue
+
 \usepackage{setspace}
 \onehalfspacing
 
@@ -42,9 +45,9 @@
 %---------------------------------------------------------------------------
 \begin{document}
 \begin{center}
-{\bf NE 250, F15 \\
+{\bf NE 250, F17 \\
 Fission, Neutron Transport\\
-September 2, 2015}
+August 25, 2017}
 \end{center}
 
 \setlength{\unitlength}{1in}
@@ -55,7 +58,7 @@ September 2, 2015}
 %---------------------------------------------------------------------------
 \section*{Fission}
 
-The main goal is the utilization of the energy released by a controled chain reaction of nuclear fission events. An example of fission reaction:
+The main goal is the utilization of the energy released by a controlled chain reaction of nuclear fission events. An example of fission reaction:
  \[
  n+^{235}\text{U} \rightarrow \text{fission products + more neutrons +} \approx 200MeV
 \]
