moved binding energy into the intro section.

--- a/01-intro/intro.tex
+++ b/01-intro/intro.tex
@@ -158,7 +158,23 @@ a + b &\rightarrow c + d\\
 Q &= \bigl[ (m_a + m_b) - (m_c + m_d) \bigr]c^2
 \end{align*}
 
-Any of these interactions are \textbf{probabilistic}, and the probabilities are expressed as cross sections. \\
+To think about this, we can look at the binding energy per nucleon. The larger the binding energy per nucleon, the greater the work that must be done to remove the nucleon from the nucleus, the more stable the nucleus. Important features of the graph:
+%https://www.miniphysics.com/binding-energy-per-nucleon-and-nuclear.html
+
+\begin{itemize}
+\item Excluding the lighter nuclei, the average binding energy per nucleon is about 8 MeV.
+The maximum binding energy per nucleon occurs at around mass number A = 50, and corresponds to the most stable nuclei. Iron nucleus Fe-56 is located close to the peak with a binding energy per nucleon value of approximately 8.8 MeV. It's one of the most stable nuclides that exist.
+\item Nuclei with very low or very high mass numbers have lesser binding energy per nucleon and are less stable because the lesser the binding energy per nucleon, the easier it is to separate the nucleus into its constituent nucleons.
+\item Nuclei with low mass numbers may undergo nuclear fusion, where light nuclei are joined together under certain conditions so that the final product may have a greater binding energy per nucleon.
+\item Nuclei with high mass numbers may undergo nuclear fission, where the nucleus split to give two daughter nuclei with the release of neutrons. The daughter nuclei will possess a greater binding energy per nucleon.
+\end{itemize}
+
+
+\begin{center}
+\includegraphics[scale=0.6]{../figs/nucleonbinding}
+\end{center}
+
+All particle interactions are \textbf{probabilistic}, and the probabilities are expressed as cross sections. \\
 We will use $\sigma$ for microscopic and $\Sigma$ as macroscopic.\\
 The reaction rate [\# / cm$^2$ s] = $\phi \sigma N$ = $nv \sigma N$.
 
